<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veliby</string>

    <string name="ok">Alright!</string>

    <string name="playservice_issue_title">Ouch!</string>
    <string name="playservice_issue_content">There seem to be an issue with "Google Play Services". There will be no map, but the next screen will invite you to go on the Google Play Store to update "Google Play Services".</string>

    <string name="welcome_title">Welcome to Veliby!</string>
    <string name="welcome_introduction">Veliby is simple and concise application that shows you the state of bike stations around you with a simple color code:</string>
    <string name="welcome_plenty">5 bikes/stands or more, go for it!</string>
    <string name="welcome_some">3&#8211;4 bikes/stands, be careful!</string>
    <string name="welcome_few">1&#8211;2 bikes/stands, not recommended&#8230;</string>
    <string name="welcome_none">No bike/stand :(</string>
    <string name="welcome_closed">Station closed</string>
    <string name="welcome_faved">Station in your favorite list. You can use a widget to display your list on your homescreen or lock screen.</string>
    <string name="welcome_unfaved">Station not in your favorite list.</string>

    <string name="welcome_controls">Don\'t hesitate to click on a station to display more information.
        
Finally, 2 buttons let you control the app:</string>
    <string name="welcome_refresh">Lets you refresh data. The update is also automatic at each app start/load.</string>
    <string name="welcome_mode_find">Colors indicate number of available bikes. Click to show bike stands.</string>
    <string name="welcome_mode_return">Colors indicate number of available bike stands. Click to show bikes.</string>
    <string name="welcome_choosecity">Choose a city on the left hand side panel</string>

    <string name="action_mode">Display mode</string>
    <string name="action_mode_find">Available bikes</string>
    <string name="action_mode_return">Available bike stands</string>

    <string name="action_reload">Refresh data</string>
    <string name="action_reload_start">Update started</string>
    <string name="action_reload_datarecent">Data already up to date</string>
    <string name="action_reload_complete">Update complete</string>
    <string name="action_reload_failure">Update failed: please check your Internet connection</string>
    <string name="action_reload_contractfailure">Contracts update failed: check your Internet connection</string>
    
    <string name="action_faved">Station is now a favorite, find it on your widget</string>
    <string name="action_unfaved">Station removed from your favorites</string>

    <string name="welcome_ok">Understood!</string>

    <string name="refresh">Update data</string>
    <string name="refresh_date">Never updated</string>

    <string name="infoview_stationclosed">Station closed!</string>
    <string name="infoview_noinfo">Information unavailable</string>
    <string name="infoview_favorite">Favorite station</string>
    
    <string name="widget_stationclosed">Closed</string>
    <string name="widget_nofavstation">No favorite station, please star one in Veliby</string>

    <string-array name="color_mode_array">
        <item>Find a bike</item>
        <item>Retrieve a bike</item>
    </string-array>

    <string name="map_nofav">No favorite station, mark one as favorite to activate this mode. To do so, choose a station and click on the star.</string>
    <string name="map_directionsfailed">Impossible to obtain directions.</string>
    <string name="map_nodistance">Distance unavailable</string>
    <string name="map_meters">meters</string>

    <string name="map_stationinfo_getdirections">Get directions</string>
    <string name="map_stationinfo_toggle">Display/hide additional info</string>

    <string-array name="menu_left_items">
        <item>Help</item>
        <item></item>
        <item>menu_left_modes:force_expand:one_selection:Modes</item>
        <item></item>
        <item>menu_left_cities:normal:one_selection:Cities</item>
    </string-array>

    <string-array name="menu_left_modes">
        <item>All stations</item>
        <item>Favorites Stations</item>
    </string-array>

    <string-array name="menu_left_cities">
    </string-array>

    <string name="menu_open">Open Menu</string>
    <string name="menu_close">Close Menu</string>
    <string name="menu_no_city">No city downloaded: please check your internet connection and hit reload.</string>
    <string name="action_reload_nomap">The plan isn\'t loaded yet, please wait a few seconds to retry or restart app.</string>
</resources>
