<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_station_item"
    android:layout_width="wrap_content"
    android:layout_height="27dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/widget_stationclosed"
        android:layout_width="@dimen/widget_stationclosed_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="@string/widget_stationclosed"
        android:textSize="@dimen/widget_stationclosed"
        android:textColor="#FFFF0000"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/widget_station_bikeimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:contentDescription="@string/action_mode_find"
        android:src="@drawable/bikes" />

    <TextView
        android:id="@+id/widget_station_bikes"
        android:text="0"
        android:layout_height="wrap_content"
        android:textSize="@dimen/widget_station_bikes"
        android:layout_gravity="center_vertical"
        android:layout_width="@dimen/widget_station_intwidth"
        android:includeFontPadding="false" />

    <ImageView
        android:id="@+id/widget_station_bikestandimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/action_mode_return"
        android:src="@drawable/parking" />

    <TextView
        android:id="@+id/widget_station_stands"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="@dimen/widget_station_stands"
        android:layout_gravity="center_vertical"
        android:layout_width="@dimen/widget_station_intwidth"
        android:includeFontPadding="false" />

    <TextView
        android:id="@+id/widget_station_title"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="@dimen/widget_station_title"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:includeFontPadding="false"
        android:textColor="@android:color/widget_edittext_dark"
        android:singleLine="true"
        android:ellipsize="end" />

</LinearLayout>